--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.4",
     "bootstrap": "^3.4.1",
     "primeng": "^8.0.2",
+    "core-js": "^3.1.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -32,10 +33,11 @@
     "@angular/cli": "~8.3.2",
     "@angular/compiler-cli": "~8.2.4",
     "@angular/language-service": "~8.2.4",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -46,7 +48,10 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.7.0"
   },
   "engines": {
     "node": "10.16.3"
